# fugue

./: .envrc  Cargo.toml  README.md  default.nix  flake.nix  languages.toml
contrib/completion/: fugue.bash  fugue.fish  fugue.nu  fugue.zsh
docs/: architecture.md
fugue-core/: Cargo.toml
fugue-core/src/: comment.rs  config.rs  diagnostic.rs  doc_formatter.rs  history.rs  indent.rs  lib.rs  line_ending.rs  match_brackets.rs  position.rs  selection.rs  syntax.rs  test.rs  text_annotations.rs  uri.rs
fugue-core/src/snippets/: active.rs  elaborate.rs  parser.rs  render.rs
fugue-core/src/syntax/: config.rs
fugue-core/tests/: indent.rs
fugue-dap/: Cargo.toml
fugue-dap-types/: Cargo.toml
fugue-dap/src/: client.rs  lib.rs  registry.rs
fugue-event/: Cargo.toml
fugue-event/src/: lib.rs  runtime.rs
fugue-loader/: Cargo.toml  build.rs
fugue-loader/src/: config.rs  grammar.rs  lib.rs  main.rs
fugue-lsp/: Cargo.toml
fugue-lsp-types/: Cargo.toml  README.md
fugue-lsp/src/: client.rs  jsonrpc.rs  lib.rs
fugue-parsec/: Cargo.toml
fugue-parsec/src/: lib.rs
fugue-stdx/: Cargo.toml
fugue-stdx/src/: env.rs  faccess.rs  lib.rs  path.rs  rope.rs
fugue-term/: Cargo.toml
fugue-term/src/: application.rs  args.rs  commands.rs  compositor.rs  config.rs  events.rs  handlers.rs  health.rs  job.rs  keymap.rs  lib.rs  main.rs
fugue-term/src/commands/: dap.rs  lsp.rs  syntax.rs  typed.rs
fugue-term/src/handlers/: auto_save.rs  completion.rs  diagnostics.rs  document_colors.rs  prompt.rs  signature_help.rs  snippet.rs
fugue-term/src/handlers/completion/: item.rs  path.rs  request.rs  resolve.rs  word.rs
fugue-term/src/keymap/: default.rs  macros.rs
fugue-term/src/ui/: completion.rs  document.rs  editor.rs  info.rs  markdown.rs  menu.rs  mod.rs  overlay.rs  picker.rs  popup.rs  prompt.rs  spinner.rs  statusline.rs  text.rs  text_decorations.rs
fugue-term/src/ui/lsp/: hover.rs  signature_help.rs
fugue-term/src/ui/picker/: handlers.rs  query.rs
fugue-term/src/ui/text_decorations/: diagnostics.rs
fugue-term/tests/: integration.rs
fugue-term/tests/test/: auto_pairs.rs  command_line.rs  commands.rs  helpers.rs  movement.rs  splits.rs
fugue-term/tests/test/commands/: insert.rs  write.rs
fugue-tui/: Cargo.toml  README.md
fugue-tui/src/: buffer.rs  layout.rs  terminal.rs  text.rs
fugue-tui/src/backend/: mod.rs  termina.rs  test.rs
fugue-tui/src/widgets/: block.rs  list.rs  mod.rs  paragraph.rs  reflow.rs  table.rs
fugue-tui/tests/: terminal.rs  text.rs  widgets_block.rs  widgets_list.rs  widgets_paragraph.rs  widgets_table.rs
fugue-vcs/: Cargo.toml
fugue-vcs/src/: diff.rs  git.rs  lib.rs
fugue-vcs/src/diff/: line_cache.rs  worker.rs
fugue-vcs/src/diff/worker/: test.rs
fugue-vcs/src/git/: test.rs
fugue-view/: Cargo.toml
fugue-view/src/: clipboard.rs  document.rs  editor.rs  events.rs  expansion.rs  graphics.rs  gutter.rs  handlers.rs  info.rs  input.rs  lib.rs  register.rs  theme.rs  view.rs
fugue-view/src/annotations/: diagnostics.rs
fugue-view/src/handlers/: completion.rs  dap.rs  diagnostics.rs  lsp.rs  word_index.rs
xtask/: Cargo.toml
xtask/src/: docgen.rs  helpers.rs  main.rs
