[workspace]
resolver = "2"
members = [
  "fugue-core",
  "fugue-view",
  "fugue-term",
  "fugue-tui",
  "fugue-lsp-types",
  "fugue-lsp",
  "fugue-event",
  "fugue-dap-types",
  "fugue-dap",
  "fugue-loader",
  "fugue-vcs",
  "fugue-parsec",
  "fugue-stdx",
  "xtask",
]

default-members = [
  "fugue-term"
]

[profile.release]
lto = "thin"

[profile.opt]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = true
opt-level = 3

[profile.integration]
inherits = "test"
package.fugue-core.opt-level = 2
package.fugue-tui.opt-level = 2
package.fugue-term.opt-level = 2

[workspace.dependencies]
tree-house = { version = "0.3.0", default-features = false }
nucleo = "0.5.0"
slotmap = "1.0.7"
thiserror = "2.0"
tempfile = "3.23.0"
bitflags = "2.10"
unicode-segmentation = "1.2"
ropey = { version = "1.6.1", default-features = false, features = ["simd"] }
foldhash = "0.2"
parking_lot = "0.12"
futures-executor = "0.3"
futures-util = { version = "0.3", features = ["std", "async-await"], default-features = false }
tokio-stream = "0.1.17"
toml = "0.9"
termina = "0.1"
sonic-rs = "0.5"
# MSRV: update once the MSRV is >=1.85
globset = "=0.4.16"

[workspace.package]
version = "25.7.1"
edition = "2021"
authors = ["Louis Dutton <louis@dutton.digital>", "Blaž Hrastnik <blaz@mxxn.io>"]
categories = ["editor"]
repository = "https://github.com/louisdutton/fugue"
homepage = "https://github.com/louisdutton/fugue"
license = "GPL-3.0-only"
rust-version = "1.82"
