[package]
name = "fugue-loader"
description = "Build bootstrapping for Fugue crates"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
fugue-stdx = { path = "../fugue-stdx" }

anyhow = "1"
toml.workspace = true
etcetera = "0.10"
once_cell = "1.21"
log = "0.4"

tree-house.workspace = true
