[package]
name = "fugue-term"
description = "A post-modern text editor."
include = ["src/**/*", "README.md"]
default-run = "fugue"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = ["git"]
unicode-lines = ["fugue-core/unicode-lines", "fugue-view/unicode-lines"]
integration = ["fugue-event/integration_test"]
git = ["fugue-vcs/git"]

[[bin]]
name = "fugue"
path = "src/main.rs"

[dependencies]
fugue-stdx = { path = "../fugue-stdx" }
fugue-core = { path = "../fugue-core" }
fugue-event = { path = "../fugue-event" }
fugue-view = { path = "../fugue-view" }
fugue-lsp = { path = "../fugue-lsp" }
fugue-dap = { path = "../fugue-dap" }
fugue-vcs = { path = "../fugue-vcs" }
fugue-loader = { path = "../fugue-loader" }

anyhow = "1"
once_cell = "1.21"

tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "io-std", "time", "process", "macros", "fs", "parking_lot"] }
tui = { path = "../fugue-tui", package = "fugue-tui", default-features = false, features = ["termina"] }
termina = { workspace = true, features = ["event-stream"] }
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
tokio-stream = "0.1"
futures-util = { version = "0.3", features = ["std", "async-await"], default-features = false }
arc-swap = { version = "1.7.1" }
indexmap = "2.12"
libc = "0.2.177"

# Logging
fern = "0.7"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
log = "0.4"

# File picker
nucleo.workspace = true
# MSRV: update once the MSRV is >=1.85
ignore = "=0.4.23"
grep-regex = "=0.1.13"
grep-searcher = "=0.1.14"
# markdown doc rendering
pulldown-cmark = { version = "0.13", default-features = false }
# file type detection
content_inspector = "0.2.4"
thiserror.workspace = true

# opening URLs
open = "5.3.3"
url = "2.5.4"

# config
toml.workspace = true

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

dashmap = "6.0"

[build-dependencies]
fugue-loader = { path = "../fugue-loader" }

[dev-dependencies]
smallvec = "1.15"
indoc = "2.0.6"
tempfile.workspace = true
same-file = "1.0.1"
