[package]
name = "xtask"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fugue-term = { path = "../fugue-term" }
fugue-core = { path = "../fugue-core" }
fugue-view = { path = "../fugue-view" }
fugue-loader = { path = "../fugue-loader" }
toml.workspace = true
